Temporary fix for tags not wrapping correctly

--- a/main.css
+++ b/main.css
@@ -318,8 +318,9 @@ tr > .leftpad {
 	border: none;
 	padding: 2px 8px;	
 	text-align: center;
+	vertical-align: top;
 	text-decoration: none;
-	
+	display: inline-block;
 	opacity: 0.7;
 	filter: alpha(opacity=7); /* For IE8 and earlier */
 	
